--- a/src/index.css
+++ b/src/index.css
@@ -64,6 +64,6 @@ form {
   margin: 0 0.25em 0 0;
   background: transparent;
   border: none;
-  color: whitesmoke;
+  color: black;
   font-size: 1rem;
 }
